src/snapshots/alma__parser__tests__test_module_parser__single_line_comments.snap
---
source: src/parser.rs
assertion_line: 2963
expression: "parse(\"\\\n-- Comment\nmodule Test\n    -- Comment\n    exposing (\n    -- Comment\n    main)\n\n-- Comment\nimport Test.Fruits exposing (Fruit(Banana))\n\n-- Comment\nmain =\n-- Comment\n    1\n\n-- Comment\nmodule Test.Fruits\n    -- Comment\n    exposing (Fruit(Banana))\n    -- Comment\n    type Fruit =\n        -- Comment\n        Banana\n\")"
---
Input:

-- Comment
module Test
    -- Comment
    exposing (
    -- Comment
    main)

-- Comment
import Test.Fruits exposing (Fruit(Banana))

-- Comment
main =
-- Comment
    1

-- Comment
module Test.Fruits
    -- Comment
    exposing (Fruit(Banana))
    -- Comment
    type Fruit =
        -- Comment
        Banana


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        2,
                    ),
                    end: Index(
                        2,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Index(
                    7,
                ),
                end: Index(
                    7,
                ),
                value: Identifier(
                    Node {
                        start: Index(
                            7,
                        ),
                        end: Index(
                            7,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [
            Node {
                start: Index(
                    10,
                ),
                end: Index(
                    20,
                ),
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: Index(
                                    11,
                                ),
                                end: Index(
                                    11,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                            Node {
                                start: Index(
                                    13,
                                ),
                                end: Index(
                                    13,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                },
                            },
                        ],
                        full_name: SymbolU32 {
                            value: 7,
                        },
                    },
                    alias: None,
                    exposing: [
                        Node {
                            start: Index(
                                16,
                            ),
                            end: Index(
                                19,
                            ),
                            value: Type {
                                name: Node {
                                    start: Index(
                                        16,
                                    ),
                                    end: Index(
                                        16,
                                    ),
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 4,
                                        },
                                    },
                                },
                                constructors: [
                                    Node {
                                        start: Index(
                                            18,
                                        ),
                                        end: Index(
                                            18,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 5,
                                            },
                                        },
                                    },
                                ],
                            },
                        },
                    ],
                },
            },
        ],
        definitions: [
            Untyped(
                Pattern(
                    Node {
                        start: Index(
                            22,
                        ),
                        end: Index(
                            22,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    22,
                                ),
                                end: Index(
                                    22,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            25,
                        ),
                        end: Index(
                            25,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: Index(
                            28,
                        ),
                        end: Index(
                            28,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: Index(
                            30,
                        ),
                        end: Index(
                            30,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 3,
                            },
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 7,
                },
            },
            exports: [
                Node {
                    start: Index(
                        34,
                    ),
                    end: Index(
                        37,
                    ),
                    value: Type {
                        name: Node {
                            start: Index(
                                34,
                            ),
                            end: Index(
                                34,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 4,
                                },
                            },
                        },
                        constructors: [
                            Node {
                                start: Index(
                                    36,
                                ),
                                end: Index(
                                    36,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 5,
                                    },
                                },
                            },
                        ],
                    },
                },
            ],
            imports: [],
            definitions: [],
            type_definitions: [
                Node {
                    start: Index(
                        40,
                    ),
                    end: Index(
                        44,
                    ),
                    value: TypeDefinition_ {
                        name: Node {
                            start: Index(
                                41,
                            ),
                            end: Index(
                                41,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 4,
                                },
                            },
                        },
                        vars: [],
                        typ: Union {
                            constructors: [
                                Node {
                                    start: Index(
                                        44,
                                    ),
                                    end: Index(
                                        44,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                44,
                                            ),
                                            end: Index(
                                                44,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 5,
                                                },
                                            },
                                        },
                                        params: [],
                                    },
                                },
                            ],
                        },
                    },
                },
            ],
        },
    ],
)
