src/snapshots/alma__parser__tests__test_module_parser__submodule-2.snap
---
source: src/parser.rs
assertion_line: 2490
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\n\n  a = 1\")"
---
Input:

module Parent

module Parent.Test

  a = 1

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 1,
                    end: 1,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: 3,
                        end: 3,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: 5,
                        end: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 5,
                },
            },
            exports: [],
            imports: [],
            definitions: [
                Untyped(
                    Pattern(
                        Node {
                            start: 6,
                            end: 6,
                            value: Identifier(
                                Node {
                                    start: 6,
                                    end: 6,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                            ),
                        },
                        Node {
                            start: 8,
                            end: 8,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Float(
                                    1.0,
                                ),
                            },
                        },
                    ),
                ),
            ],
            type_definitions: [],
        },
    ],
)
