src/snapshots/alma__parser__tests__test_module_parser__submodule-3.snap
---
source: src/parser.rs
assertion_line: 2494
expression: "parse(\"\\\nmodule Parent\n\nmodule Parent.Test\n\n  a = 1\n\na = 1\n\")"
---
Input:

module Parent

module Parent.Test

  a = 1

a = 1


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [
            Untyped(
                Pattern(
                    Node {
                        start: Index(
                            9,
                        ),
                        end: Index(
                            9,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    9,
                                ),
                                end: Index(
                                    9,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            11,
                        ),
                        end: Index(
                            11,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [
        Module {
            name: ModuleName {
                parts: [
                    Node {
                        start: Index(
                            3,
                        ),
                        end: Index(
                            3,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: Index(
                            5,
                        ),
                        end: Index(
                            5,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 5,
                },
            },
            exports: [],
            imports: [],
            definitions: [
                Untyped(
                    Pattern(
                        Node {
                            start: Index(
                                6,
                            ),
                            end: Index(
                                6,
                            ),
                            value: Identifier(
                                Node {
                                    start: Index(
                                        6,
                                    ),
                                    end: Index(
                                        6,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                            ),
                        },
                        Node {
                            start: Index(
                                8,
                            ),
                            end: Index(
                                8,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Float(
                                    1.0,
                                ),
                            },
                        },
                    ),
                ),
            ],
            type_definitions: [],
        },
    ],
)
