src/snapshots/alma__parser__tests__test_module_parser__submodules_nested.snap
---
source: src/parser.rs
assertion_line: 3112
expression: "parse(\"\\\nmodule Test\n\nmodule Test.Test1\n  a = 1\n\n  module Test.Test1.Test1Test\n    b = 1\n\nmodule Test.Test2\n    c = 5\n    \")"
---
Input:

module Test

module Test.Test1
  a = 1

  module Test.Test1.Test1Test
    b = 1

module Test.Test2
    c = 5
    

Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:



module Test.Test1.Test1Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier b 74:75 74:75
            expr:
                Float 1 78:79


module Test.Test1
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier a 33:34 33:34
            expr:
                Float 1 37:38


module Test.Test2
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier c 103:104 103:104
            expr:
                Float 5 107:108

