src/snapshots/alma__parser__tests__test_module_parser__top_level_def.snap
---
source: src/parser.rs
assertion_line: 2513
expression: "parse(\"\\\nmodule Test\n\na = 1\")"
---
Input:

module Test

a = 1

Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            1,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            3,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
}
