src/snapshots/alma__parser__tests__test_module_parser__type_only_definitions-2.snap
---
source: src/parser.rs
assertion_line: 3227
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [
            Import {
                span: Index(
                    2,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 6,
                            },
                            span: Index(
                                2,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 6,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            2,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 7,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            2,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 8,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            2,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 9,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 10,
                                    },
                                    span: Index(
                                        2,
                                    ),
                                },
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                    span: Index(
                                        2,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            3,
                        ),
                    },
                    typ: App(
                        Constructor {
                            span: Index(
                                5,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 3,
                                },
                                span: Index(
                                    4,
                                ),
                            },
                            params: [],
                        },
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            6,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 4,
                                },
                                span: Index(
                                    6,
                                ),
                            },
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ),
        ],
        type_definitions: [],
        expressions: {
            Index(
                0,
            ): Expression {
                span: Index(
                    8,
                ),
                expr: Float(
                    5.0,
                ),
            },
        },
        expression_types: {
            Index(
                0,
            ): None,
        },
    },
    [],
)

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            6,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
}
